[gd_scene load_steps=6 format=3 uid="uid://b01pqypkc7tru"]

[ext_resource type="Script" uid="uid://q6uj6kirlhfq" path="res://gui/ui.gd" id="1_v62dg"]
[ext_resource type="Theme" uid="uid://b1ys22w5kvbpd" path="res://gui/theme.tres" id="2_cemxd"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_71j4m"]
bg_color = Color(1, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qfnet"]
bg_color = Color(0, 0, 1, 1)

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_i7141"]
size = Vector2(8, 8)

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_v62dg")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -162.0
offset_top = -36.0
offset_right = 162.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 8
theme = ExtResource("2_cemxd")

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Bars" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="HealthBar" type="ProgressBar" parent="MarginContainer/HBoxContainer/Bars"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
theme_override_styles/fill = SubResource("StyleBoxFlat_71j4m")
step = 1.0
value = 33.0
rounded = true

[node name="ManaBar" type="ProgressBar" parent="MarginContainer/HBoxContainer/Bars"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
theme_override_styles/fill = SubResource("StyleBoxFlat_qfnet")
step = 1.0
value = 33.0
rounded = true

[node name="Stats" type="GridContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
columns = 2

[node name="SkillLabel" type="Label" parent="MarginContainer/HBoxContainer/Stats"]
layout_mode = 2
text = "Skill: "

[node name="SkillValue" type="Label" parent="MarginContainer/HBoxContainer/Stats"]
unique_name_in_owner = true
layout_mode = 2
text = "69"

[node name="SpeedLabel" type="Label" parent="MarginContainer/HBoxContainer/Stats"]
layout_mode = 2
text = "Speed: "

[node name="SpeedValue" type="Label" parent="MarginContainer/HBoxContainer/Stats"]
unique_name_in_owner = true
layout_mode = 2
text = "69"

[node name="EquipItems" type="GridContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
columns = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/HBoxContainer/EquipItems"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/EquipItems/PanelContainer"]
layout_mode = 2
texture = SubResource("PlaceholderTexture2D_i7141")

[node name="PanelContainer2" type="PanelContainer" parent="MarginContainer/HBoxContainer/EquipItems"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/EquipItems/PanelContainer2"]
layout_mode = 2
texture = SubResource("PlaceholderTexture2D_i7141")

[node name="PanelContainer3" type="PanelContainer" parent="MarginContainer/HBoxContainer/EquipItems"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/EquipItems/PanelContainer3"]
layout_mode = 2
texture = SubResource("PlaceholderTexture2D_i7141")

[node name="EquipSpells" type="GridContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
columns = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/HBoxContainer/EquipSpells"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/EquipSpells/PanelContainer"]
layout_mode = 2
texture = SubResource("PlaceholderTexture2D_i7141")

[node name="PanelContainer2" type="PanelContainer" parent="MarginContainer/HBoxContainer/EquipSpells"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/EquipSpells/PanelContainer2"]
layout_mode = 2
texture = SubResource("PlaceholderTexture2D_i7141")

[node name="PanelContainer3" type="PanelContainer" parent="MarginContainer/HBoxContainer/EquipSpells"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/EquipSpells/PanelContainer3"]
layout_mode = 2
texture = SubResource("PlaceholderTexture2D_i7141")

[node name="PanelContainer4" type="PanelContainer" parent="MarginContainer/HBoxContainer/EquipSpells"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/EquipSpells/PanelContainer4"]
layout_mode = 2
texture = SubResource("PlaceholderTexture2D_i7141")

[node name="Inventory" type="GridContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
columns = 3

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/HBoxContainer/Inventory"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/Inventory/PanelContainer"]
layout_mode = 2
texture = SubResource("PlaceholderTexture2D_i7141")

[node name="PanelContainer2" type="PanelContainer" parent="MarginContainer/HBoxContainer/Inventory"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/Inventory/PanelContainer2"]
layout_mode = 2
texture = SubResource("PlaceholderTexture2D_i7141")

[node name="PanelContainer3" type="PanelContainer" parent="MarginContainer/HBoxContainer/Inventory"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/Inventory/PanelContainer3"]
layout_mode = 2
texture = SubResource("PlaceholderTexture2D_i7141")

[node name="PanelContainer4" type="PanelContainer" parent="MarginContainer/HBoxContainer/Inventory"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/Inventory/PanelContainer4"]
layout_mode = 2
texture = SubResource("PlaceholderTexture2D_i7141")

[node name="PanelContainer5" type="PanelContainer" parent="MarginContainer/HBoxContainer/Inventory"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/Inventory/PanelContainer5"]
layout_mode = 2
texture = SubResource("PlaceholderTexture2D_i7141")

[node name="PanelContainer6" type="PanelContainer" parent="MarginContainer/HBoxContainer/Inventory"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/Inventory/PanelContainer6"]
layout_mode = 2
texture = SubResource("PlaceholderTexture2D_i7141")
